// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkifiedString ignores empty string 1`] = `
<DocumentFragment>
  <span />
</DocumentFragment>
`;

exports[`LinkifiedString ignores missing children 1`] = `<DocumentFragment />`;

exports[`LinkifiedString ignores non-string children 1`] = `
<DocumentFragment>
  Half
  <a
    href="https://example.com"
  >
    linked
  </a>
</DocumentFragment>
`;

exports[`LinkifiedString ignores string without links 1`] = `
<DocumentFragment>
  <span>
    Here’s regular text
  </span>
</DocumentFragment>
`;

exports[`LinkifiedString linkifies string 1`] = `
<DocumentFragment>
  <span>
    <a
      href="https://example.com"
      target="_blank"
    >
      https://example.com
    </a>
     and more
  </span>
</DocumentFragment>
`;
